kubernetes-stack/yamls-post-chaos/istio/ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http-app
      protocol: HTTP
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: http-mg-mread-vs
spec:
  hosts:
  - "*"
  gateways:
  - ingress-gateway
  http:
  - match:
    - uri:
        prefix: /mg
    rewrite:
      uri: " "
    route:
    - destination:
        host: http-requester
    retries:
      attempts: 5
      perTryTimeout: 1s
      retryOn: 5xx,connect-failure,gateway-error
    timeout: 4s
  - match:
    - uri:
        prefix: /read
    rewrite:
      uri: " "
    route:
    - destination:
        host: http-requester
    retries:
      attempts: 5
      perTryTimeout: 1s
      retryOn: 5xx
    timeout: 4s
