kubernetes-stack/yamls-post-chaos/istio/istio-prueba.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ingress-gateway
spec:
  gateways:
  - ingress-gateway
  http:
  - match:
    - uri:
        prefix: /mg
    rewrite:
      uri: " "
    route:
    - destination:
        host: mg-v1
        subset: dr-prueba
        port:
          number: 8081
    retries:
      attempts: 10
      perTryTimeout: 3s
      retryOn: 5xx

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ingress-gateway
spec:
  host: mg-v1
  subsets:
  - name: primary
    labels:
      release: primary

---
